General fixes 1. Services fix on placeholder content 2. Dynamics sections and pages link and handler function 3. Banks list reorder at afiliation page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -664,11 +664,11 @@
 .services-section .image-column .color-layer {
   position: absolute;
   left: 42px;
-  bottom: -10px;
+  bottom: -15px;
   right: 60px;
   height: 100%;
   background: url(../images/resource/service-pattern-layer-new.png) no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .services-section .image-column .border-layer {
