--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -1,3 +1,19 @@
+---
+import { isActive } from "../utils/links-handler";
+
+const { url } = Astro.request;
+const links = [
+  { href: "/", text: "Inicio", item: "inicio" },
+  { href: "/#planes/", text: "Planes", item: "planes" },
+  { href: "/#panel", text: "Panel de usuarios", item: "panel" },
+  { href: "/#galeria/", text: "Galería", item: "galería" },
+  { href: "/#servicios/", text: "Servicios", item: "servicios" },
+  { href: "/payment/", text: "Pagos C2P", item: "pagos" },
+  { href: "/c2p/", text: "Afiliación Clave dinámica", item: "afiliación" },
+  { href: "/#contacto/", text: "Contacto", item: "contacto" },
+];
+---
+
 <header class="main-header">
   <!-- Header Top -->
   <div class="header-top">
@@ -61,27 +77,18 @@
               id="navbarSupportedContent"
             >
               <ul class="navigation clearfix">
-                <li class="current dropdown" data-menu-item="inicio">
-                  <a href="/#">Inicio</a>
-                </li>
-                <li class="dropdown" data-menu-item="planes">
-                  <a href="/#planes">Planes</a>
-                </li>
-                <li class="dropdown" data-menu-item="panel">
-                  <a href="/#panel">Panel de usuario</a>
-                </li>
-                <li class="dropdown">
-                  <a href="/payment?">Pago C2P</a>
-                </li>
-                <li class="dropdown" data-menu-item="galeria">
-                  <a href="/#galeria">Galeria</a>
-                </li>
-                <li class="dropdown" data-menu-item="servicios">
-                  <a href="/#servicios">Servicios</a>
-                </li>
-                <li>
-                  <a href="/#contacto" data-menu-item="contacto">Contacto</a>
-                </li>
+                {
+                  links.map((link) => (
+                    <li
+                      class={
+                        isActive(url, link.href) ? "current" : "" + "dropdown"
+                      }
+                      data-menu-item={link.item}
+                    >
+                      <a href={link.href}>{link.text}</a>
+                    </li>
+                  ))
+                }
               </ul>
             </div>
           </nav>
