--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -7,7 +7,6 @@
     <h2 class="mb-5 text-center service-title">Planes residenciales</h2>
     <!-- Upper Section -->
     <div class="upper-section">
-
       <div class="row clearfix">
         <!-- Service block -->
         <div class="service-block col-lg-4 col-md-6 col-sm-12">
@@ -25,10 +24,9 @@
             <div class="icon">
               <img src="images/icons/family.svg" alt="" />
             </div>
-            <a class="services" href="services-detail.html"
-              >Ver servicio <span class="arrow lnr lnr-arrow-right"
-              ></span></a
-            >
+            <!-- <a class="services" href="services-detail.html"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"></span>
+            </a> -->
           </div>
         </div>
 
@@ -48,10 +46,9 @@
             <div class="icon">
               <img src="images/icons/basic.svg" alt="" />
             </div>
-            <a class="services" href="services-detail.html"
-              >Ver servicio <span class="arrow lnr lnr-arrow-right"
-              ></span></a
-            >
+            <!-- <a class="services" href="services-detail.html"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"></span>
+            </a> -->
           </div>
         </div>
 
@@ -65,16 +62,13 @@
             <span class="border-one"></span>
             <span class="border-two"></span>
             <h4><a href="services-detail.html">Solo TV</a></h4>
-            <div class="text">
-              88 canales de televisión por tan solo 7,5$
-            </div>
+            <div class="text">88 canales de televisión por tan solo 7,5$</div>
             <div class="icon">
               <img src="images/icons/tv.svg" alt="" />
             </div>
-            <a class="services" href="services-detail.html"
-              >Ver servicio <span class="arrow lnr lnr-arrow-right"
-              ></span></a
-            >
+            <!-- <a class="services" href="services-detail.html"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"></span>
+            </a> -->
           </div>
         </div>
       </div>
@@ -83,7 +77,6 @@
     <h2 class="mb-5 text-center service-title">Planes empresariales</h2>
     <!-- Upper Section -->
     <div class="upper-section">
-
       <div class="row clearfix">
         <!-- Service block -->
         <div class="service-block col-lg-4 col-md-6 col-sm-12 offset-lg-4">
@@ -94,18 +87,16 @@
           >
             <span class="border-one"></span>
             <span class="border-two"></span>
-            <h4><a href="services-detail.html">Satelite TV</a></h4>
+            <h4><a href="services-detail.html">Ejecutivo</a></h4>
             <div class="text">
-              Lorem ipsum dolor sit amet them consec tetura dipiscing elit sed
-              doeiumod Donec modern solution quam felis.
+              500 megas de descarga y subida direccionamiento público de ser requerido $70.
             </div>
             <div class="icon">
               <img src="images/icons/briefcase.svg" alt="" />
             </div>
-            <a class="services" href="services-detail.html"
-              >Ver servicio <span class="arrow lnr lnr-arrow-right"
-              ></span></a
-            >
+            <!-- <a class="services" href="services-detail.html"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"></span>
+            </a> -->
           </div>
         </div>
       </div>
@@ -135,7 +126,8 @@
               <h2>Accede al panel de usuarios</h2>
             </div>
             <div class="bold-text">
-              Aquí podrás administrar y controlar diversos aspectos de su cuenta y servicios tales como:
+              Aquí podrás administrar y controlar diversos aspectos de su cuenta
+              y servicios tales como:
             </div>
             <div class="text">
               <ul class="content-list">
@@ -167,6 +159,6 @@
   .content-list > li {
     list-style-type: disc;
     list-style-position: inside;
-    color: #0B94B8;
+    color: #0b94b8;
   }
 </style>
