--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -1,6 +1,4 @@
 ---
-import { isActive } from "../utils/links-handler";
-
 const { url } = Astro.request;
 const links = [
   { href: "/", text: "Inicio", item: "inicio" },
@@ -12,6 +10,10 @@ const links = [
   { href: "/c2p/", text: "Afiliación Clave dinámica", item: "afiliación" },
   { href: "/#contacto/", text: "Contacto", item: "contacto" },
 ];
+
+function isActive(url: { pathname: string }, link: string): boolean {
+  return url.pathname === link;
+}
 ---
 
 <header class="main-header">
@@ -79,10 +81,7 @@ const links = [
               <ul class="navigation clearfix">
                 {
                   links.map((link) => (
-                    <li
-                      class={`${isActive(url, link.href) ? "current" : ""} dropdown`}
-                      data-menu-item={link.item}
-                    >
+                    <li class="dropdown" data-menu-item={link.item}>
                       <a href={link.href}>{link.text}</a>
                     </li>
                   ))
